--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "chart.js": "^4.4.7",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
