--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "chart.js": "^4.4.7",
     "vue": "^3.2.45",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
