--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "chart.js": "^4.4.7",
+    "nodejs": "^0.0.0",
     "vue": "^3.2.45",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.1.6"
