--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "nodejs": "^0.0.0",
     "vue": "^3.2.45",
     "vue-chartjs": "^5.3.2",
