use string based x axis for dates and make filters draft

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "nodejs": "^0.0.0",
     "vue": "^3.2.45",
     "vue-chartjs": "^5.3.2",
